feature: downlaod and delete files functionality with enhanced search file filter, enhancing the docker image creation

--- a/abnormal-file-hub-main/backend/Dockerfile
+++ b/abnormal-file-hub-main/backend/Dockerfile
@@ -1,11 +1,18 @@
-FROM python:3.10-slim
+# Use Python 3.11 slim image as base
+FROM python:3.11-slim
 
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    DJANGO_SETTINGS_MODULE=abnormal_file_hub.settings
+
+# Set work directory
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
@@ -15,19 +22,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy project files
 COPY . .
 
-# Create necessary directories
-RUN mkdir -p media staticfiles data
-
-# Set permissions
-RUN chmod -R 777 data media staticfiles
+# Create media directory
+RUN mkdir -p media/uploads
 
 # Collect static files
 RUN python manage.py collectstatic --noinput
 
-# Make start script executable
-COPY start.sh .
-RUN chmod +x start.sh
-
+# Expose port
 EXPOSE 8000
 
-CMD ["./start.sh"] 
+# Run gunicorn
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "--workers", "4", "--timeout", "120", "abnormal_file_hub.wsgi:application"] 
