--- a/abnormal-file-hub-main/frontend/Dockerfile
+++ b/abnormal-file-hub-main/frontend/Dockerfile
@@ -1,20 +1,30 @@
-FROM node:18-alpine
+# Build stage
+FROM node:18-alpine as build
 
+# Set work directory
 WORKDIR /app
 
 # Install dependencies
 COPY package*.json ./
-RUN npm install --legacy-peer-deps
+RUN npm ci
 
-# Copy project files
+# Copy source code
 COPY . .
 
 # Build the application
 RUN npm run build
 
-# Install serve to run the application
-RUN npm install -g serve
+# Production stage
+FROM nginx:alpine
 
-EXPOSE 3000
+# Copy built assets from build stage
+COPY --from=build /app/dist /usr/share/nginx/html
 
-CMD ["serve", "-s", "build", "-l", "3000"] 
+# Copy nginx configuration
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Expose port
+EXPOSE 80
+
+# Start nginx
+CMD ["nginx", "-g", "daemon off;"] 
